Fix layout issue when scheduling newsletter
[MAILPOET-2787]

--- a/assets/css/src/components/_categories.scss
+++ b/assets/css/src/components/_categories.scss
@@ -1,5 +1,6 @@
 .mailpoet-categories {
   font-family: $font-family;
+  line-height: 16px;
   list-style: none;
   margin: 0;
   padding: $grid-gap ($grid-gap / 2);
