--- a/assets/css/src/generic/_helpers.scss
+++ b/assets/css/src/generic/_helpers.scss
@@ -2,6 +2,11 @@
   width: min-content;
 }
 
+.mailpoet-vertical-middle {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .mailpoet-full-width {
   width: 100%;
 }
